[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyNukiBT"
dynamic = ["version"]
authors = [
  { name="Ronen Gruengras", email="ronengr@gmail.com" },
]
description = "Nuki Bluetooth API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bleak>=0.20",
    "crccheck>=1.3.0",
    "PyNaCl>=1.3.0",
    "construct>=2.10.70",
    "packaging>=23.1"
]

[project.urls]
"Homepage" = "https://github.com/ronengr/pyNukiBT"
"Bug Tracker" = "https://github.com/ronengr/pyNukiBT/issues"

[tool.setuptools_scm]
